add readme link to GUI

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="row g-2 p-1">
         <div class="col-3">
             <div class="p-3 border bg-light h-100 d-grid">
-                <h1 class="text-center">fReEFLEX GUI</h1>
-                <button id="connect_button" type="button" class="btn btn-primary">connect
-                </button>
+                <div><i class="bi bi-github"></i> <a href="https://github.com/fReEFLEX/fReEFLEX-GUI">Readme</a></div>
+                <h1 class="text-center m-2">fReEFLEX GUI</h1>
+                <button id="connect_button" type="button" class="btn btn-primary">connect</button>
             </div>
         </div>
         <div class="col-3">
