add light frequency mode

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                        title="Measure system latency, connect serial port to eliminate polling rate when responding to clicks."></i>
                     <button id="connect_serial_button" type="button" class="btn btn-primary btn-sm">serial</button>
                 </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="mode" id="light_frequency" value="4">
+                    <label class="form-check-label" for="light_frequency">
+                        Light frequency
+                    </label>
+                    <i class="bi bi-question-circle" data-bs-toggle="tooltip" data-bs-placement="right"
+                       title="Measure frequency of pulsed light sources, e.g. backlight strobing, dimmed LED lights. Up to 25 kHz."></i>
+                </div>
             </div>
         </div>
         <div class="col-3">
